--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-beautifulsoup4==4.11.1
-openai==0.27.2
-python-dotenv==1.0.0
-requests==2.28.2
+beautifulsoup4
+openai
+python-dotenv
+requests
+google-auth 
+google-auth-oauthlib 
+google-auth-httplib2 
+google-api-python-client
